--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Hello Roshan Roy</h1>
+    <p>this is a paragraph</p>
     <button onclick="myFunction()">Click me!!!!</button>
     <script src="index.js"></script>
 </body>
